--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -1,13 +1,28 @@
 {
-  "setupTasks": [{ "name": "Install Dependencies", "command": "npm install" }],
+  // These tasks will run in order when initializing your CodeSandbox project.
+  "setupTasks": [
+    {
+      "command": "npm ci",
+      "name": "Install Dependencies"
+    }
+  ],
+
+  // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
     "start": {
       "name": "start",
       "command": "npm run start",
       "runAtStart": true,
-      "preview": { "port": 5000 },
-      "restartOn":{
-        "files":["${file}"]
+      "preview": {
+        "port": 5000
+      },
+      "restartOn": {
+        "files": [
+          "${file}"
+        ],
+        "branch": false,
+        "clone": false,
+        "resume": false
       }
     }
   }
